--- a/src/components/Header/Navigation.astro
+++ b/src/components/Header/Navigation.astro
@@ -11,6 +11,7 @@ const active = (path: string) => {
 <div id="primary-nav" class="nav-links">
     <a href="/" class={active("/")}>Hjem</a>
     <a href="/blog" class={active("/blog")}>Skriverier</a>
+    <a href="/visualiseringer" class={active("/visualiseringer")}>Visualiseringer</a>
     <a href="/about" class={active("/about")}>Om meg</a>
 </div>
 
